--- a/materializebasic/grid.html
+++ b/materializebasic/grid.html
@@ -69,5 +69,18 @@
     <div class="col s3 m4 offset-m4 blue white-text"><span class="flow-text">offset-4</span></div>
     <div class="col s3 m4 offset-m8 blue white-text"><span class="flow-text">offset-8</span></div>
   </div>
+
+  <dl>
+    <dt class="white-text teal darken-5 center-align">컬럼 순서 바꾸기 push, pull</dt>
+    <dd>
+      <p>push-m4 :: 해당 컬럼을 좌측에서 4컬럼만큼 이동</p>
+      <p>pull-m4 :: 해당 컬럼을 우측에서 4커럼만큼 이동</p>
+    </dd>
+  </dl>
+  <div class="row">
+    <div class="col s12 m4 push-m4 blue"><span class="flow-text">1(push-m4)</span></div>
+    <div class="col s12 m4 pull-m4 blue"><span class="flow-text">2(pull-m4)</span></div>
+    <div class="col s12 m4 blue"><span class="flow-text">3</span></div>
+  </div>
 </body>
 </html>
