--- a/axiosCdnWithJsonServer/index.html
+++ b/axiosCdnWithJsonServer/index.html
@@ -32,7 +32,7 @@
           <td>
             <button @click="showForm()">추가</button>
             <button @click="showForm(emp)">수정</button>
-            <button @click="showForm(emp.id)">삭제</button>
+            <button @click="deleteEmp(emp.id)">삭제</button>
           </td>
         </tr>
       </tbody>
